fixed height for min-height in footer to avoid overlapping

--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,7 @@ footer .end {
   display: flex;
   position: absolute;
   margin-top: 100px;
-  height: 50px;
+  min-height: 50px;
   text-align: center;
   align-items: center;
   align-content: center;
